# elastool

./: .gitignore.baiduyun.uploading.cfg  COPYRIGHT.baiduyun.uploading.cfg  INSTALL  INSTALL.baiduyun.uploading.cfg  MANIFEST.in.baiduyun.uploading.cfg  PKG-INFO  PKG-INFO.baiduyun.uploading.cfg  README  README.baiduyun.uploading.cfg  README.md  elastool.in  requirements.txt  setup.cfg  setup.py  setup.py.baiduyun.uploading.cfg
doc/: Manual.tm  Refs.bib
elastool/: .sound_velocity.py.swp  INSTALL  MANIFEST.in  PKG-INFO  README.md  bcksound_velocity.py  calc_elastic_constants.py  calc_elastic_elate.py  calc_stress.py  christoffel.py  deform_cell_asess_strains.py  deform_cell_ohess_strains.py  deform_cell_ulics.py  elastool  elastool_elate_browser.py  elate.py  equilibrium_md.py  extract_mean_values.py  find_spg.py  make_conv_cell.py  material_analysis.py  optimize_initial_str.py  plot_christoffel_gnu.py  plotchristoffel.py  predict_thickness_2D.py  read_flags.py  read_help.py  read_input.py  relax_atoms_pos.py  setup.py  sound_velocity.py  stability_criteria.py  strain_matrix.py  vasp_run.py  write_default_input.py  write_incar.py
elastool/elastool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/1D-SWCNT/: KPOINTS-static  SWCNT.vasp  elastool.in  pbs.sh
examples/Al2O3-Trigonal/: CONTCAR.vasp  INCARs  elastool.in
examples/AuSe-2D/: 1.vasp  elastool.in
examples/CaMoO4-Tetragonal/: CONTCAR.vasp  INCARs  KPOINTS-static  elastool.in
examples/Cu-highT/: CONTCAR.vasp  INCARs  KPOINTS-dynamic  elastool.in
examples/GeSe/: CONTCAR.vasp  INCARs  KPOINTS-static  elastool.in  elastool.out  elastool_check.out  log  nohup.out
examples/Graphene/: CONTCAR.vasp  INCARs  KPOINTS-static  elastool.in  elastool.out  elastoolold.out
examples/MoS2-2D/: INCARs  elastool.in  monolayer_MoS2_mp-2815_primitive.cif.vasp  pbs.sh
examples/Phosphorene/: INCARs  POSCAR.vasp  elastool.in  monolayer_P-Phosphorus-black.cif.vasp
examples/SnO-2D/: INCARs  KPOINTS-static  elastool.in  monolayer_SnO_mp-2097_primitive.cif.vasp
examples/TiB2-Hexagonal/: CONTCAR.vasp  INCARs  elastool.in  elastool.out
examples/TiSi2-orthorhombic/: CONTCAR.vasp  INCARs  (+1 more)
(+177 files in other folders)
