[metadata]
name = elastool
version = 3.62
description = Elastic tool for zero and finite-temperature elastic constants and mechanical properties calculations
author = Zhong-Li Liu and Chinedu Ekuma
author_email = cekuma1@gmail.com
url = https://sourceforge.net/projects/elastool/
license = GNU GPL version 3
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = elastool
#include_package_data = True
scripts =
    elastool/elastool
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    seaborn
    pymatgen
    kaleido
    plotly
    spglib
    ase
    pyvista
    selenium
    catboost
    matminer
    pymatgen
    scikit-learn
    tensorflow
    keras
    bayesian-optimization
    scikit-learn
    periodictable


[options.packages.find]
where = elastool
#[options.package_data]
#elastool = gnuplot_scripts/*.gnu
